--- a/src/app/components/inputs/email-input/email-input.component.html
+++ b/src/app/components/inputs/email-input/email-input.component.html
@@ -1,2 +1,2 @@
-<input type="password" (input)="onInput($event)" placeholder="Ingrese su contraseña" required>
-<div *ngIf="isInvalid" style="color: red;">La contraseña debe tener al menos 6 caracteres.</div>
+<input type="email" (input)="onInput($event)" placeholder="Ingrese su email" required>
+<div *ngIf="isInvalid" style="color: red;">Formato de email inválido.</div>
