--- a/src/app/components/buttons/accept-button/accept-button.component.html
+++ b/src/app/components/buttons/accept-button/accept-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="handleClick()">Aceptar</button>
+<button (click)="handleClick()">
+    <i class="fas fa-thumbs-up"></i>
+    Aceptar
+</button>
