--- a/src/app/components/buttons/cancel-button/cancel-button.component.html
+++ b/src/app/components/buttons/cancel-button/cancel-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="handleClick()">Cancelar</button>
+<button (click)="handleClick()">
+    <i class="fas fa-times-circle"></i>
+    Cancelar
+</button>
