--- a/src/app/components/buttons/dark-mode-button/dark-mode-button.component.html
+++ b/src/app/components/buttons/dark-mode-button/dark-mode-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="toggleMode()">Modo Nocturno</button>
+<button (click)="toggleMode()">
+    <i class="fas fa-moon"></i>
+    Modo Nocturno
+</button>
