--- a/src/app/components/buttons/primary-button/primary-button.component.html
+++ b/src/app/components/buttons/primary-button/primary-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="handleClick()">Botón Primario</button>
+<button (click)="handleClick()">
+    <i class="fas fa-check-circle"></i>
+    Botón Primario
+</button>
