--- a/src/app/components/buttons/secondary-button/secondary-button.component.html
+++ b/src/app/components/buttons/secondary-button/secondary-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="handleClick()">Botón Secundario</button>
+<button (click)="handleClick()">
+    <i class="fas fa-info-circle"></i>
+    Botón Secundario
+</button>
