--- a/src/app/components/viewer/viewer/viewer.component.html
+++ b/src/app/components/viewer/viewer/viewer.component.html
@@ -1,1 +1,6 @@
-<p>viewer works!</p>
+<h3><i class="fas fa-eye"></i> Viewer</h3>
+<div class="viewer-container">
+  <p><strong>Password:</strong> {{ password }}</p>
+  <p><strong>Email:</strong> {{ email }}</p>
+  <p><strong>Text:</strong> {{ text }}</p>
+</div>
