--- a/src/app/components/buttons/accept-button/accept-button.component.css
+++ b/src/app/components/buttons/accept-button/accept-button.component.css
@@ -1,13 +1,18 @@
 button {
-    background-color: #28a745;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #218838;
-  }
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #34a853; /* Verde Google */
+  color: white;
+  border: none;
+  border-radius: 25px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  gap: 10px;
+}
+
+button:hover {
+  background-color: #2e8d48;
+}
