--- a/src/app/components/buttons/primary-button/primary-button.component.css
+++ b/src/app/components/buttons/primary-button/primary-button.component.css
@@ -1,13 +1,18 @@
 button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4285f4; /* Azul Google */
+  color: white;
+  border: none;
+  border-radius: 25px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  gap: 10px; /* Espacio entre icono y texto */
+}
+
+button:hover {
+  background-color: #357ae8;
+}
