--- a/src/app/components/buttons/secondary-button/secondary-button.component.css
+++ b/src/app/components/buttons/secondary-button/secondary-button.component.css
@@ -1,13 +1,18 @@
 button {
-    background-color: #6c757d;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #5a6268;
-  }
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fbbc05; /* Amarillo Google */
+  color: #222;
+  border: none;
+  border-radius: 25px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  gap: 10px;
+}
+
+button:hover {
+  background-color: #eaa800;
+}
