--- a/src/app/components/inputs/password-input/password-input.component.css
+++ b/src/app/components/inputs/password-input/password-input.component.css
@@ -1,11 +1,15 @@
 input {
-    margin: 8px 0;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 100%;
-  }
-  
-  input:focus {
-    border-color: #007bff;
-  }
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  margin-bottom: 15px; /* Añadir margen para separarlos */
+  box-sizing: border-box;
+}
+
+body.dark-mode input {
+  background-color: #333;
+  color: white;
+  border: 1px solid #444;
+}
