--- a/src/app/components/buttons/accept-button/accept-button.component.html
+++ b/src/app/components/buttons/accept-button/accept-button.component.html
@@ -1,4 +1,1 @@
-<button (click)="handleClick()">
-    <i class="fas fa-thumbs-up"></i>
-    Aceptar
-</button>
+<button (click)="handleClick()"><i class="fas fa-check"></i> Aceptar</button>
