--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -136,3 +136,19 @@ input:focus {
     padding: 10px 18px;
   }
 }
+
+.shape {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  transition: transform 1s ease, border-radius 0.5s ease; /* Transiciones suaves */
+}
+
+.square {
+  border-radius: 0; /* Cuadrado */
+}
+
+.circle {
+  border-radius: 50%; /* Círculo */
+}
+
