--- a/src/app/components/buttons/cancel-button/cancel-button.component.html
+++ b/src/app/components/buttons/cancel-button/cancel-button.component.html
@@ -1,4 +1,2 @@
-<button (click)="handleClick()">
-    <i class="fas fa-times-circle"></i>
-    Cancelar
-</button>
+
+<button (click)="handleClick()"><i class="fas fa-times"></i> Cancelar</button>
